Major Responsive Rework

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,46 +1,46 @@
-.card{
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    list-style: none;
+.card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  list-style: none;
 }
-.card__image{
-    width: 282px;
-    height: 282px;
-    border-radius: 10px 10px 0 0;
+.card__image {
+  width: 282px;
+  height: 282px;
+  border-radius: 10px 10px 0 0;
 }
-.card__description{
-    display: flex;
-    background-color: #ffffff;
-    color: black;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-left: 20px;
-    padding-right: 20px;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 0 0 10px 10px;
+.card__description {
+  display: flex;
+  background-color: #ffffff;
+  color: black;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 0 0 10px 10px;
 }
-.card__title{
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 29px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    margin-bottom: 0;
-    margin-top: 0;
+.card__title {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-bottom: 0;
+  margin-top: 0;
 }
-.card__like-button{
-    background: transparent url(../images/like-inactive.svg) center no-repeat;
-    width: 21px;
-    height: 18px;
-    border: none;
-    cursor: pointer;
+.card__like-button {
+  background: transparent url(../images/like-inactive.svg) center no-repeat;
+  width: 21px;
+  height: 18px;
+  border: none;
+  cursor: pointer;
 }
-.card__like-button:hover{
-    opacity: 0.5;
-    cursor: pointer;
+.card__like-button:hover {
+  opacity: 0.5;
+  cursor: pointer;
 }
