--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -31,8 +31,8 @@
     right: -45px;
     width: 40px;
     height: 40px;
-    background-color: black;
-    background-image: url("../images/vectors/close.svg");
+    background-color: transparent;
+    background-image: url("../images/Close.svg");
     background-repeat: no-repeat;
     background-size: contain;
   }
@@ -50,6 +50,7 @@
     line-height: 22px;
     margin-top: 0;
     margin-bottom: 54px;
+    color: #000;
   }
   .modal__form {
     display: flex;
@@ -84,6 +85,7 @@
   }
   
   .modal__button {
+    border: none;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,7 +112,7 @@
       padding: 25px 22px 25px 22px;
     }
   
-    .modal__close {
+    .modal__close-button {
       width: 26px;
       height: 26px;
       right: 0px;
