--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,46 +1,60 @@
-.card {
-  display: flex;
-  flex-direction: column;
+.card__list {
+  margin: 47.25px 0 0;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  padding: 0;
+  list-style-type: none;
+}
+
+.card__list-item {
+  background-color: #fff;
   border-radius: 10px;
-  list-style: none;
 }
+
 .card__image {
-  width: 282px;
-  height: 282px;
+  height: 280px;
+  width: 100%;
   border-radius: 10px 10px 0 0;
+  vertical-align: text-bottom;
 }
+
 .card__description {
+  margin: 25px 30px 25px 20px;
   display: flex;
-  background-color: #ffffff;
-  color: black;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  padding-left: 20px;
-  padding-right: 20px;
-  align-items: center;
   justify-content: space-between;
-  border-radius: 0 0 10px 10px;
 }
+
 .card__title {
-  font-family: "Inter", sans-serif;
+  margin: 0;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
-  line-height: 29px;
+  line-height: 1.2;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  margin-bottom: 0;
-  margin-top: 0;
+  color: #000;
 }
+
 .card__like-button {
-  background: transparent url(../images/like-inactive.svg) center no-repeat;
-  width: 21px;
-  height: 18px;
+  min-width: 21px;
+  min-height: 18px;
+  background: url(../images/Like-Inactive.svg) transparent center
+    no-repeat;
+  padding: 0;
   border: none;
-  cursor: pointer;
+  transition: opacity 1s ease-in 0s;
 }
+
 .card__like-button:hover {
-  opacity: 0.5;
   cursor: pointer;
+  opacity: 50%;
+}
+
+@media screen and (max-width: 675px) {
+  .card__list {
+    margin: 36px auto 0;
+  }
 }
