--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,13 +1,18 @@
 .page {
-  background-color: #000;
+  margin: 0 auto;
+  padding: 0;
+  max-width: 1280px;
+  font-family: "Inter", Arial, sans-serif;
   color: #fff;
   font-family: "Inter", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  background-color: #000;
 }
-.page__content {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
+
 .page__section {
   max-width: 880px;
   width: 100%;
