--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,3 +1,6 @@
+/* ------------------------ BASE STYLES FOR CARDS ------------------------ */
+
+/* Grid layout for the cards */
 .card__list {
   margin: 47.25px 0 0;
   display: grid;
@@ -13,6 +16,54 @@
   border-radius: 10px;
 }
 
+/* ------------------------ CARD IMAGE STYLES ------------------------ */
+.card__image {
+  cursor: pointer;
+  height: 280px;
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+  vertical-align: text-bottom;
+}
+
+/* ------------------------ CARD DESCRIPTION STYLES ------------------------ */
+.card__description {
+  margin: 25px 30px 25px 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card__title {
+  margin: 0;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 1.2;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  color: #000;
+}
+
+/* ------------------------ CARD LIKE BUTTON STYLES ------------------------ */
+.card__like-button {
+  min-width: 21px;
+  min-height: 18px;
+  background: url(../images/Like-Inactive.svg) transparent center no-repeat;
+  padding: 0;
+  border: none;
+  transition: opacity 0.3s ease-in 0s;
+}
+
+.card__like-button:hover {
+  cursor: pointer;
+  opacity: 50%;
+}
+
+.card__like-button_active {
+  background: url(../images/Like-Active.svg) transparent center no-repeat;
+}
+
+/* ------------------------ CARD DELETE BUTTON STYLES ------------------------ */
 .card__delete {
   position: relative;
 }
@@ -34,53 +85,7 @@
   opacity: 60%;
 }
 
-.card__image {
-  cursor: pointer;
-  height: 280px;
-  width: 100%;
-  border-radius: 10px 10px 0 0;
-  vertical-align: text-bottom;
-}
-
-.card__description {
-  margin: 25px 30px 25px 20px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.card__title {
-  margin: 0;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 1.2;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  color: #000;
-}
-
-.card__like-button {
-  min-width: 21px;
-  min-height: 18px;
-  background: url(../images/Like-Inactive.svg) transparent center
-    no-repeat;
-  padding: 0;
-  border: none;
-  transition: opacity 0.3s ease-in 0s;
-}
-
-
-.card__like-button_active {
-  background: url(../images/Like-Active.svg) transparent center
-    no-repeat;
-}
-
-.card__like-button:hover {
-  cursor: pointer;
-  opacity: 50%;
-}
-
+/* ------------------------ MEDIA QUERIES ------------------------ */
 @media screen and (max-width: 675px) {
   .card__list {
     margin: 36px auto 0;
